--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "ejs": "^2.6.1",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "node-localstorage": "^2.1.5",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {},
